--- a/css/booking-form.css
+++ b/css/booking-form.css
@@ -12,6 +12,8 @@
     background-color: #fff;
 }
 
+
+
 .close-btn
 {
     position: absolute;
@@ -84,8 +86,22 @@
     height: 35px;
     padding: 5px 15px;
 
-    border: 1px solid #636363;
+    border: 1px solid #9E9E9E;
     border-radius: 5px;
+    background: #ddd;
+    background:    -moz-linear-gradient(top,  #ddd 0%, #fff 45%, #fff 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ddd), color-stop(45%,#fff), color-stop(100%,#fff));
+    background: -webkit-linear-gradient(top,  #ddd 0%,#fff 45%,#fff 100%);
+    background:      -o-linear-gradient(top,  #ddd 0%,#fff 45%,#fff 100%);
+    background:     -ms-linear-gradient(top,  #ddd 0%,#fff 45%,#fff 100%);
+    background:         linear-gradient(to bottom,  #ddd 0%,#fff 45%,#fff 100%);
+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#ffffff',GradientType=0 );
+}
+.form-input:focus
+{
+    border: 1px solid #636363;
+    outline: none;
 }
 .input-group .label
 {
@@ -104,7 +120,7 @@
     margin: 0 auto;
     padding: 10px 40px;
 
-    border: 1px solid #acacac;
+    border: 1px solid #838383;
     border-radius: 5px;
     background: #fff;
     background:    -moz-linear-gradient(top,  #fff 42%, #a7f2ed 87%, #e9e9e9 100%);
@@ -115,10 +131,13 @@
     background:         linear-gradient(to bottom,  #fff 42%,#a7f2ed 87%,#e9e9e9 100%);
     background-color: #e9e9e9;filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9e9e9',GradientType=0 );
 }
+.btn:hover
+{
+    border: 1px solid #4B4B4B;
+}
 
 .btn-primary
 {
-    border: 1px solid #333;
     background: #d5b786;
     background:    -moz-linear-gradient(top,  #d5b786 42%, #baa47f 87%, #a38d68 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(42%,#d5b786), color-stop(87%,#baa47f), color-stop(100%,#a38d68));
