Booking Form - Step 1 :8ball:
Initial static HTML page for Package Selection

--- a/css/booking-form.css
+++ b/css/booking-form.css
@@ -34,7 +34,7 @@
 {
     font-family: 'Agency FB', sans-serif;
 
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 
     text-align: center;
 }
@@ -86,7 +86,7 @@
     height: 35px;
     padding: 5px 15px;
 
-    border: 1px solid #9E9E9E;
+    border: 1px solid #9e9e9e;
     border-radius: 5px;
     background: #ddd;
     background:    -moz-linear-gradient(top,  #ddd 0%, #fff 45%, #fff 100%);
@@ -133,7 +133,7 @@
 }
 .btn:hover
 {
-    border: 1px solid #4B4B4B;
+    border: 1px solid #4b4b4b;
 }
 
 .btn-primary
@@ -172,6 +172,12 @@
     padding: 0;
 
     list-style: none;
+}
+.list-item
+{
+    padding-bottom: 15px;
+
+    list-style-type: disc;
 }
 ul li > .label
 {
