--- a/css/modal.css
+++ b/css/modal.css
@@ -1,52 +1,67 @@
 
-.container {
+.container
+{
     width: 960px;
     margin: 0 auto;
-    /* border: 1px solid black; */
 }
 
-.modal {
+.modal
+{
     width: 79%;
-    border: 1px solid #B29558;
     margin: 0 auto;
-    border-radius: 10px;
     padding: 5px 5px 5px 5px;
+
+    border: 1px solid #b29558;
+    border-radius: 10px;
 }
-.modal-img{
+.modal-img
+{
     margin: 0 15px 0 30px;
 }
 
-.modal-close {
-    text-align: right;
+.modal-close
+{
     font-family: Gibson;
     font-size: 32px;
-    padding: 5;
+
     margin-right: 5px;
+    padding: 5;
+
+    text-align: right;
 }
-.modal-close > a{
+.modal-close > a
+{
     text-decoration: none;
-    color:black;
+
+    color: black;
 }
-.modal-img {    
+.modal-img
+{
     height: 230px;
-    /* border: 1px solid black; */
 }
-.modal-title {
-    font-size: 26px;
+.modal-title
+{
     font-family: Agency FB;
+    font-size: 26px;
 }
-.message {
-    font-size: 16px;
+.message
+{
     font-family: Gibson;
+    font-size: 16px;
     line-height: 27px;
+
     padding: 17px 0 17px 0;
 }
-.booking {
-    font-size: 18px;
+.booking
+{
     font-family: Gibson;
-    color: #C3B39B;
+    font-size: 18px;
+
+    color: #c3b39b;
 }
-.booking > a {
-    color: #C3B39B;
+.booking > a
+{
     font-style: italic;
+
+    color: #c3b39b;
 }
