--- a/css/workforce.css
+++ b/css/workforce.css
@@ -1,38 +1,48 @@
-.member > h2 {
-    margin-bottom: 0px;
+.member > h2
+{
+    margin-bottom: 0;
 }
-.workforce-inner-container {
+.workforce-inner-container
+{
     width: 100%;
-    margin-top:60px;
+    margin-top: 60px;
 }
-.container {
+.container
+{
     width: 960px;
-    margin: 0px auto;
+    margin: 0 auto;
 }
-.workforce {
+.workforce
+{
+    font-family: Agency FB;
     font-size: 36px;
-    font-family: Agency FB;
 }
-.member-title {
-    font-size: 16px;
+.member-title
+{
     font-family: Agency FB;
+    font-size: 16px;
     font-weight: bold;
 }
-.member-description {
-    font-size: 16px;
+.member-description
+{
     font-family: Gibson;
+    font-size: 16px;
     line-height: 24px;
+
     margin: 10px 0 10px 0;
 }
 
-.members.row{
+.members.row
+{
     padding: 100px 0 15px 0;
 }
-.member {
+.member
+{
     padding-top: 50px;
 }
-.inner-img {
+.inner-img
+{
     width: 100%;
-    
+
     border-radius: 50%;
 }
